--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "@shun-shobon/opencode-caffeinate",
+	"version": "0.1.0",
 	"type": "module",
+	"description": "OpenCode plugin that keeps macOS awake during active sessions.",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/shun-shobon/opencode-caffeinate.git"
