--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
 		"eslint": "9.39.2",
 		"prettier": "3.7.4",
 		"typescript": "5.9.3"
+	},
+	"publishConfig": {
+		"access": "public",
+		"registry": "https://registry.npmjs.org"
 	}
 }
