--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Setup | Bun
         uses: ./.github/actions/setup-bun
 
+      - name: Setup | Node.js
+        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
+        with:
+          node-version-file: .tool-versions
+
       - name: Run | Changeset
         uses: changesets/action@e0145edc7d9d8679003495b11f87bd8ef63c0cba # v1.5.3
         with:
